--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-py-cord
-asyncio
-aiohttp
-pymongo
-motor
-dnspython
-tinydb
+py-cord==2.6.1
+asyncio==4.0.0
+aiohttp==3.8.6
+pymongo==4.14.1
+motor==3.7.1
+dnspython==2.7.0
+tinydb==4.8.2
 pandas
-humanize
+humanize==4.12.3
 pnwkit-py
